--- a/react_project/src/index.css
+++ b/react_project/src/index.css
@@ -1,8 +1,17 @@
-/* index.css */
-html, body, #root {
+
+html {
+  height: 100%;
+}
+
+body {
+  min-height: 100%;
+  overflow-y: scroll;
+}
+
+#root {
   min-height: 100vh;
-  margin: 0;
-  padding: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 body {
